fixed spacing in projects

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2393,7 +2393,7 @@ input, select, textarea {
 			display: block;
 			margin: 0 0 2em 0;
 			width: 100%;
-			height: 250px;
+			height: 275px;
 		}
 		.image.fit.photo {
 			display: block;
